fix: overflow game buttons and drag items

--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.css
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.css
@@ -30,6 +30,12 @@
   margin: 0 15% 0; 
 }
 
+#game-button{
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
+}
+
 .menu-item{
   width: 120px;
 }
