--- a/src/app/features/game/game/game.component.css
+++ b/src/app/features/game/game/game.component.css
@@ -368,11 +368,15 @@
   z-index: 10;
   display: flex;
   flex-direction: column;
+  padding: 0 5%;
+
 }
 
 #info-box p{
   margin-right: 1%;
   color: white;
+  white-space: nowrap;
+  display: inline-block;
 }
 
 .notification.ng-enter {
