--- a/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.css
+++ b/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.css
@@ -62,10 +62,17 @@
 
   .teamA-box{
     background-color: #00a3f5;/*#007EA8;*/
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis;
+
   }
 
   .teamB-box{
     background-color: #f19a3e;
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis;
   }
 
   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
